--- a/app/templates/interactive_objects_manage.html
+++ b/app/templates/interactive_objects_manage.html
@@ -76,6 +76,11 @@
                                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z" />
                                         </svg>
                                     </a>
+                                    <a href="/objects/{{ obj.id }}/edit" class="text-yellow-600 hover:text-yellow-900" title="Редактировать">
+                                        <svg class="h-5 w-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z" />
+                                        </svg>
+                                    </a>
                                     {% if obj.object_type == 'qr' and obj.qr_code_path %}
                                     <a href="/static/{{ obj.qr_code_path }}" download class="text-green-600 hover:text-green-900" title="Скачать QR код">
                                         <svg class="h-5 w-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
